CU-3nb8jm - Additional Functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=accounting_service
-spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mauve
+server.servlet.context-path= /api
+
+#database
+spring.datasource.username=postgres
+spring.datasource.password=awesam40
+spring.datasource.url=jdbc:postgresql://localhost:5432/mauve
+spring.datasource.hikari.schema=accounting
+spring.jpa.database=POSTGRESQL
+
 spring.data.jpa.repositories.enabled=true
 spring.jpa.show-sql=false
-server.servlet.context-path= /api
+spring.jpa.hibernate.ddl-auto=update
