--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id "io.freefair.lombok" version "6.1.0"
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "com.google.protobuf" version "0.8.16"
@@ -17,7 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'mysql:mysql-connector-java'
+    implementation 'org.postgresql:postgresql'
     implementation 'com.google.code.gson:gson'
     implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '1.0.0'
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
