--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id "io.freefair.lombok" version "6.1.0"
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "com.google.protobuf" version "0.8.16"
@@ -28,6 +27,9 @@ dependencies {
     implementation group: 'io.grpc', name: 'grpc-netty', version: '1.16.1'
     implementation group: 'io.grpc', name: 'grpc-protobuf', version: '1.16.1'
     implementation group: 'io.grpc', name: 'grpc-stub', version: '1.16.1'
+
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
