--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'com.google.code.gson:gson'
     implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '1.0.0'
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    implementation 'com.github.corneliouzbett:mpesa-sdk:1.1'
+
 
     implementation 'com.google.protobuf:protobuf-java:3.8.0'
 
